tests/transpiler/x/zig/left_join_multi.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:23 +0000
const std = @import("std");

const Customer = struct {
    id: i64,
    name: []const u8,
};

const Item = struct {
    order_id: i64,
    sku: []const u8,
};

const Entry = struct {
    order_id: i64,
    name: []const u8,
    item: Item,
};

pub fn main() void {
    const customers: [_]Customer = [_]Customer{.{ .id = 1, .name = "Alice" }, .{ .id = 2, .name = "Bob" }};
    const orders = [_]std.StringHashMap(i64){blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 100) catch unreachable; m.put("customerId", 1) catch unreachable; break :blk m; }, blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 101) catch unreachable; m.put("customerId", 2) catch unreachable; break :blk m; }};
    const items: [_]Item = [_]Item{.{ .order_id = 100, .sku = "a" }};
    const result: []Entry = blk: {
    var arr = std.ArrayList(Entry).init(std.heap.page_allocator);
    for (orders) |o| {
        for (customers) |c| {
            for (items) |i| {
                if (o.customer_id == c.id && o.id == i.order_id) {
                    arr.append(.{ .order_id = o.id, .name = c.name, .item = i }) catch unreachable;
                }
            }
        }
    }
    var tmp = arr.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Left Join Multi ---"});
    for (result) |r| {
        try std.io.getStdOut().writer().print("{any} {any} {any}\n", .{r.order_id, r.name, r.item});
    }
}
